Input type import file alignment issue. #19579

--- a/app/design/adminhtml/Magento/backend/web/css/source/forms/_fields.less
+++ b/app/design/adminhtml/Magento/backend/web/css/source/forms/_fields.less
@@ -288,6 +288,12 @@
     .admin__fieldset > & {
         margin-bottom: 3rem;
         position: relative;
+        
+        &.field-import_file {
+            .input-file {
+                margin-top: 6px;
+            }
+        }
     }
 
     //  Hide group legend and show first field label instead
